deploy: 6df95e7c15821337c3677479da6bbe16f2b4e8d1

--- a/contributing/index.html
+++ b/contributing/index.html
@@ -223,7 +223,7 @@ $ pip install -e .
 $ pytest -sv
 </code></pre>
 
-<p>To get flake8, just <code>pip install flake</code> into your virtualenv.</p>
+<p>To get flake8, just <code>pip install flake8</code> into your virtualenv.</p>
 <ol>
 <li>Commit your changes and push your branch to GitHub:</li>
 </ol>
