--- a/developer-guide/index.html
+++ b/developer-guide/index.html
@@ -145,7 +145,7 @@
             <div class="section">
               
                 <h1 id="developer-guide">Developer Guide</h1>
-<pre><code class="eval_rst">.. toctree::
+<pre><code class="language-eval_rst">.. toctree::
    :maxdepth: 1
 
    install
