--- a/developer-guide/install/index.html
+++ b/developer-guide/install/index.html
@@ -146,10 +146,9 @@
               
                 <h1 id="installation">Installation</h1>
 <p>To develop <code>DiTTo</code>, you will need to follow the development instructions:</p>
-<pre><code class="bash">git clone https://github.com/NREL/ditto
+<pre><code class="language-bash">git clone https://github.com/NREL/ditto
 pip install -e &quot;.[dev]&quot;
 </code></pre>
-
 <p>In addition to all the dependencies, this also installs the requirements for running tests.
 Also, this installs auto code formatters, checks for trailing whitespace, checks for valid AST and checks for merge conflict markers.
 The pre-commit hooks will not let you commit code that fails these checks.
