--- a/developer-guide/style/index.html
+++ b/developer-guide/style/index.html
@@ -151,11 +151,10 @@
 for developing DiTTo.</p>
 <h2 id="naming-conventions">Naming Conventions</h2>
 <p>1) All functions and methods should be lower case with use of underscores for clarity</p>
-<pre><code class="python">def parse_data(): pass
+<pre><code class="language-python">def parse_data(): pass
 </code></pre>
-
 <p>2) All classes should be <code>PascalCase</code></p>
-<pre><code class="python">class GridLABDReader(AbstractReader):
+<pre><code class="language-python">class GridLABDReader(AbstractReader):
     pass
 </code></pre>
               
