--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@ Readers and writers are then implemented to perform the translation from a given
 <li><a href="https://gitter.im/NREL/ditto">Gitter</a></li>
 <li><a href="https://nrel.github.io/ditto">Documentation</a></li>
 </ul>
-<pre><code class="eval_rst">.. toctree::
+<pre><code class="language-eval_rst">.. toctree::
  :maxdepth: 1
 
  readme
@@ -217,5 +217,5 @@ Readers and writers are then implemented to perform the translation from a given
 
 <!--
 MkDocs version : 1.1.2
-Build Date UTC : 2020-08-14 21:10:10.653841+00:00
+Build Date UTC : 2020-12-16 07:06:18.287432+00:00
 -->
