--- a/installation/index.html
+++ b/installation/index.html
@@ -144,27 +144,23 @@
 <p><strong>Stable release</strong></p>
 <p>To install the latest version of ditto from master for development, run this command in your terminal
 after changing your directory to the folder where you'd like to set up the development:</p>
-<pre><code class="bash">$ pip install git+https://github.com/NREL/ditto.git@master#egg=ditto[all]
+<pre><code class="language-bash">$ pip install git+https://github.com/NREL/ditto.git@master#egg=ditto[all]
 </code></pre>
-
 <p><strong>From sources</strong></p>
 <p>The sources for ditto can be downloaded from the <a href="https://github.com/NREL/ditto">Github repo</a>.</p>
 <p>You can either clone the public repository:</p>
-<pre><code class="bash">$ git clone git://github.com/NREL/ditto
+<pre><code class="language-bash">$ git clone git://github.com/NREL/ditto
 </code></pre>
-
 <p>Or download the <a href="https://github.com/NREL/ditto/tarball/master">tarball</a>:</p>
-<pre><code class="bash">$ curl  -OL https://github.com/NREL/ditto/tarball/master
+<pre><code class="language-bash">$ curl  -OL https://github.com/NREL/ditto/tarball/master
 </code></pre>
-
 <p>Once you have a copy of the source, you can install it with:</p>
-<pre><code class="bash">$ pip install -e .[all]
+<pre><code class="language-bash">$ pip install -e .[all]
 </code></pre>
-
 <p>See the developer guide for instructions on how to add features to ditto.</p>
 <p><strong>Install specific packages alone</strong></p>
 <p>If you want specific packages alone, you will be able to do the following:</p>
-<pre><code class="bash">$ pip install git+https://github.com/NREL/ditto.git@master#egg=ditto
+<pre><code class="language-bash">$ pip install git+https://github.com/NREL/ditto.git@master#egg=ditto
 $ ditto list --readers
 $ ditto list --writers
 $ pip install git+https://github.com/NREL/ditto.git@master#egg=ditto[opendss,gridlabd]
