--- a/contributing/index.html
+++ b/contributing/index.html
@@ -198,40 +198,35 @@ articles, and such.</p>
 <li>Fork the <code>ditto</code> repo on GitHub.</li>
 <li>Clone your fork locally:</li>
 </ol>
-<pre><code class="bash">$ git clone git@github.com:your_name_here/ditto.git
+<pre><code class="language-bash">$ git clone git@github.com:your_name_here/ditto.git
 </code></pre>
-
 <ol>
 <li>Install your local copy into a virtualenv. Assuming you have virtualenvwrapper installed, this is how you set up your fork for local development:</li>
 </ol>
-<pre><code class="bash">$ conda create -n python3-env python=3
+<pre><code class="language-bash">$ conda create -n python3-env python=3
 $ cd ditto/
 $ pip install -e .
 </code></pre>
-
 <ol>
 <li>Create a branch for local development:</li>
 </ol>
-<pre><code class="bash">$ git checkout -b name-of-your-bugfix-or-feature
+<pre><code class="language-bash">$ git checkout -b name-of-your-bugfix-or-feature
 </code></pre>
-
 <p>Now you can make your changes locally.</p>
 <ol>
 <li>When you're done making changes, check that your changes pass flake8 and the tests, including testing other Python versions with tox:</li>
 </ol>
-<pre><code class="bash">$ flake8 ditto tests
+<pre><code class="language-bash">$ flake8 ditto tests
 $ pytest -sv
 </code></pre>
-
 <p>To get flake8, just <code>pip install flake8</code> into your virtualenv.</p>
 <ol>
 <li>Commit your changes and push your branch to GitHub:</li>
 </ol>
-<pre><code class="bash">$ git add .
+<pre><code class="language-bash">$ git add .
 $ git commit -m &quot;Your detailed description of your changes.&quot;
 $ git push origin name-of-your-bugfix-or-feature
 </code></pre>
-
 <ol>
 <li>Submit a pull request through the GitHub website.</li>
 </ol>
@@ -246,7 +241,7 @@ $ git push origin name-of-your-bugfix-or-feature
 </ol>
 <h2 id="tips">Tips</h2>
 <p>To run a subset of tests</p>
-<pre><code class="bash">$ pytest -sv
+<pre><code class="language-bash">$ pytest -sv
 </code></pre>
               
             </div>
