deploy: 41b93f954af5836cbe5986add0c104b19dc22fde

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           <a href="." class="icon icon-home"> ditto
         </a><div role="search">
   <form id ="rtd-search-form" class="wy-form" action="./search.html" method="get">
-      <input type="text" name="q" placeholder="Search docs" title="Type search term here" />
+      <input type="text" name="q" placeholder="Search docs" aria-label="Search docs" title="Type search term here" />
   </form>
 </div>
       </div>
@@ -118,7 +118,7 @@
       <div class="wy-nav-content">
         <div class="rst-content"><div role="navigation" aria-label="breadcrumbs navigation">
   <ul class="wy-breadcrumbs">
-    <li><a href="." class="icon icon-home" alt="Docs"></a> &raquo;</li>
+    <li><a href="." class="icon icon-home" aria-label="Docs"></a> &raquo;</li>
       <li>Home</li>
     <li class="wy-breadcrumbs-aside">
     </li>
@@ -198,6 +198,6 @@ Readers and writers are then implemented to perform the translation from a given
 </html>
 
 <!--
-MkDocs version : 1.4.2
-Build Date UTC : 2023-03-13 15:25:38.627420+00:00
+MkDocs version : 1.4.3
+Build Date UTC : 2023-07-11 16:30:29.773737+00:00
 -->
